Ersetze "height: 30px" durch em in Schaltflächen

--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -71,7 +71,7 @@ button,
 [role="button"],
 html input[type="button"],
 input[type="reset"],
-input[type="submit"], 
+input[type="submit"],
 input[type="button"],
 input[type="radio"],
 input[type="checkbox"] {
@@ -265,7 +265,7 @@ input[type="checkbox"] {
 
 select,
 input[type="file"] {
-	height: 30px;
+    height: 1.875rem;
 	line-height: 30px;
 }
 
