--- a/src/sass/structure/header/_metasearch.scss
+++ b/src/sass/structure/header/_metasearch.scss
@@ -27,7 +27,7 @@
             border: none;
             outline: none;
             color: var(--color-MainBackground);
-            height: 30px;
+            height: 1.875rem;
             display: inline-block;
             margin-right: -25px;
             margin-bottom: 0px;
@@ -59,7 +59,7 @@
             @include border-radius(20px);
             position: relative;
             z-index: 100;
-            height: 30px;
+            height: 1.875rem;
             padding: 0 12px;
             font-weight: bold;
             border: none;
