--- a/src/sass/frameworks/slick/_slick-default.scss
+++ b/src/sass/frameworks/slick/_slick-default.scss
@@ -8,6 +8,7 @@
     user-select: none;
     touch-action: pan-y;
 }
+
 .slick-list {
     position: relative;
     overflow: hidden;
@@ -23,6 +24,7 @@
         cursor: pointer;
     }
 }
+
 .slick-slider .slick-track,
 .slick-slider .slick-list {
     transform: translate3d(0, 0, 0);
@@ -35,6 +37,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    font-size: 0;
 
     &:before,
     &:after {
@@ -50,16 +53,21 @@
         visibility: hidden;
     }
 }
+
 .slick-slide {
     float: left;
     height: 100%;
     min-height: 1px;
+    font-size: 1rem;
+
     [dir="rtl"] & {
         float: right;
     }
+
     img {
         display: block;
     }
+
     &.slick-loading img {
         display: none;
     }
@@ -81,6 +89,7 @@
         border: 1px solid transparent;
     }
 }
+
 .slick-arrow.slick-hidden {
     display: none;
 }
