Erweitere Spaltenanzahl in Hauptmenü von 3 auf 4 bei Auflösung ab 1400px

--- a/src/sass/structure/navigation/_mainmenu.scss
+++ b/src/sass/structure/navigation/_mainmenu.scss
@@ -295,6 +295,10 @@
 				@media (max-width: $screen-md - 1) {
 					column-count: 2;
 				}
+
+                @media (min-width: $screen-xl) {
+                    column-count: 4;
+                }
 			}
 
 			.nav-flyout {
